portaudio/_portaudio.py


# /usr/include/portaudio.h: 1009
if hasattr(_libs['portaudio'], 'Pa_GetStreamInfo'):
    Pa_GetStreamInfo = _libs['portaudio'].Pa_GetStreamInfo
    Pa_GetStreamInfo.argtypes = [POINTER(PaStream)]
    Pa_GetStreamInfo.restype = POINTER(PaStreamInfo)

# /usr/include/portaudio.h: 1027
if hasattr(_libs['portaudio'], 'Pa_GetStreamTime'):
    Pa_GetStreamTime = _libs['portaudio'].Pa_GetStreamTime
    Pa_GetStreamTime.argtypes = [POINTER(PaStream)]
    Pa_GetStreamTime.restype = PaTime

# /usr/include/portaudio.h: 1046
if hasattr(_libs['portaudio'], 'Pa_GetStreamCpuLoad'):
    Pa_GetStreamCpuLoad = _libs['portaudio'].Pa_GetStreamCpuLoad
    Pa_GetStreamCpuLoad.argtypes = [POINTER(PaStream)]
    Pa_GetStreamCpuLoad.restype = c_double

# /usr/include/portaudio.h: 1070
if hasattr(_libs['portaudio'], 'Pa_ReadStream'):
    Pa_ReadStream = _libs['portaudio'].Pa_ReadStream
    Pa_ReadStream.argtypes = [POINTER(PaStream), POINTER(None), c_ulong]
    Pa_ReadStream.restype = PaError

# /usr/include/portaudio.h: 1097
if hasattr(_libs['portaudio'], 'Pa_WriteStream'):
    Pa_WriteStream = _libs['portaudio'].Pa_WriteStream
    Pa_WriteStream.argtypes = [POINTER(PaStream), POINTER(None), c_ulong]
    Pa_WriteStream.restype = PaError

# /usr/include/portaudio.h: 1110
if hasattr(_libs['portaudio'], 'Pa_GetStreamReadAvailable'):
    Pa_GetStreamReadAvailable = _libs['portaudio'].Pa_GetStreamReadAvailable
    Pa_GetStreamReadAvailable.argtypes = [POINTER(PaStream)]
    Pa_GetStreamReadAvailable.restype = c_long

# /usr/include/portaudio.h: 1121
if hasattr(_libs['portaudio'], 'Pa_GetStreamWriteAvailable'):
    Pa_GetStreamWriteAvailable = _libs['portaudio'].Pa_GetStreamWriteAvailable
    Pa_GetStreamWriteAvailable.argtypes = [POINTER(PaStream)]
    Pa_GetStreamWriteAvailable.restype = c_long

# /usr/include/portaudio.h: 1130
if hasattr(_libs['portaudio'], 'Pa_GetStreamHostApiType'):
    Pa_GetStreamHostApiType = _libs['portaudio'].Pa_GetStreamHostApiType
    Pa_GetStreamHostApiType.argtypes = [POINTER(PaStream)]
    Pa_GetStreamHostApiType.restype = PaHostApiTypeId

# /usr/include/portaudio.h: 1141
if hasattr(_libs['portaudio'], 'Pa_GetSampleSize'):
    Pa_GetSampleSize = _libs['portaudio'].Pa_GetSampleSize
    Pa_GetSampleSize.argtypes = [PaSampleFormat]
    Pa_GetSampleSize.restype = PaError

# /usr/include/portaudio.h: 1151
if hasattr(_libs['portaudio'], 'Pa_Sleep'):
    Pa_Sleep = _libs['portaudio'].Pa_Sleep
    Pa_Sleep.argtypes = [c_long]
    Pa_Sleep.restype = None

# /usr/include/portaudio.h: 169
try:
    paNoDevice = (-1)
except:
    pass

# /usr/include/portaudio.h: 177
try:
    paUseHostApiSpecificDeviceSpecification = (-2)
except:
    pass

# /usr/include/portaudio.h: 436
try:
    paFloat32 = 1
except:
    pass

# /usr/include/portaudio.h: 437
try:
    paInt32 = 2
except:
    pass

# /usr/include/portaudio.h: 438
try:
    paInt24 = 4
except:
    pass

# /usr/include/portaudio.h: 439
try:
    paInt16 = 8
except:
    pass

# /usr/include/portaudio.h: 440
try:
    paInt8 = 16
except:
    pass

# /usr/include/portaudio.h: 441
try:
    paUInt8 = 32
except:
    pass

# /usr/include/portaudio.h: 442
try:
    paCustomFormat = 65536
except:
    pass

# /usr/include/portaudio.h: 444
try:
    paNonInterleaved = 2147483648
except:
    pass

# /usr/include/portaudio.h: 534
try:
    paFormatIsSupported = 0
except:
    pass

# /usr/include/portaudio.h: 591
try:
    paFramesPerBufferUnspecified = 0
except:
    pass

# /usr/include/portaudio.h: 605
try:
    paNoFlag = 0
except:
    pass

# /usr/include/portaudio.h: 610
try:
    paClipOff = 1
except:
    pass

# /usr/include/portaudio.h: 615
try:
    paDitherOff = 2
except:
    pass

# /usr/include/portaudio.h: 626
try:
    paNeverDropInput = 4
except:
    pass

# /usr/include/portaudio.h: 634
try:
    paPrimeOutputBuffersUsingStreamCallback = 8
except:
    pass

# /usr/include/portaudio.h: 639
try:
    paPlatformSpecificFlags = 4294901760
except:
    pass

# /usr/include/portaudio.h: 666
try:
    paInputUnderflow = 1
except:
    pass

# /usr/include/portaudio.h: 675
try:
    paInputOverflow = 2
except:
    pass

# /usr/include/portaudio.h: 681
try:
    paOutputUnderflow = 4
except:
    pass

# /usr/include/portaudio.h: 686
try:
    paOutputOverflow = 8
except:
    pass

# /usr/include/portaudio.h: 692
try:
    paPrimingOutput = 16
except:
    pass

PaHostApiInfo = struct_PaHostApiInfo # /usr/include/portaudio.h: 273

PaHostErrorInfo = struct_PaHostErrorInfo # /usr/include/portaudio.h: 342

PaDeviceInfo = struct_PaDeviceInfo # /usr/include/portaudio.h: 466

PaStreamParameters = struct_PaStreamParameters # /usr/include/portaudio.h: 530

PaStreamCallbackTimeInfo = struct_PaStreamCallbackTimeInfo # /usr/include/portaudio.h: 648

PaStreamInfo = struct_PaStreamInfo # /usr/include/portaudio.h: 993

# No inserted files
